--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   },
   "homepage": "https://github.com/bene-volent/website#readme",
   "dependencies": {
-    "express": "^4.18.1",
-    "firebase": "^9.9.2"
+    "express": "^4.18.1"
   }
 }
